<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_nav_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNavSideBarTopView"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:id="@+id/tv_side_nav_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/dimen_7dp"
            android:text="@string/login"
            android:textSize="@dimen/dimen_16dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linear_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_side_nav_login"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_image"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:paddingTop="@dimen/dimen_7dp" />

            <TextView
                android:id="@+id/tv_user_guest_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_7dp"
                android:text="Welcome, Guest"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_nav_header_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_below="@id/rl_nav_user_name"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_nav_header_home"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dimen_13dp"
            android:src="@mipmap/ic_home"
            android:tint="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_nav_header_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_toRightOf="@id/iv_nav_header_home"
            android:text="@string/home"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_16dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_about_header_clg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_below="@id/rl_nav_header_home"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:paddingLeft="@dimen/dimen_15dp"
        android:text="@string/about"
        android:textColor="@color/colorBlackLightLight"
        android:textSize="@dimen/dimen_15dp" />

</RelativeLayout>
