<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_nav_footer_home1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_nav_footer_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_footer_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:text="@string/more"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackLightLight"
            android:textSize="@dimen/dimen_15dp" />

        <RelativeLayout
            android:id="@+id/rl_nav_footer_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_footer_more"
            android:background="@drawable/ripple_effect_normal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_footer_contact"
                android:layout_width="@dimen/dimen_35dp"
                android:layout_height="@dimen/dimen_35dp"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dimen_13dp"
                android:src="@android:drawable/ic_menu_call"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_footer_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_toRightOf="@id/iv_footer_contact"
                android:text="@string/contact_us"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_15dp" />
        </RelativeLayout>

        <!--<RelativeLayout
            android:id="@+id/rl_nav_footer_privacy_policy"
            android:layout_below="@id/rl_nav_footer_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_footer_privacy"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:tint="@color/colorBlack"
                android:paddingLeft="@dimen/dimen_13dp"
                android:src="@mipmap/logo" />

            <TextView
                android:id="@+id/tv_footer_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/dimen_15dp"
                android:layout_toRightOf="@id/iv_footer_privacy"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nav_footer_terms_condi"
            android:layout_below="@id/rl_nav_footer_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_footer_terms"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:tint="@color/colorBlack"
                android:paddingLeft="@dimen/dimen_13dp"
                android:src="@mipmap/terms_condi" />

            <TextView
                android:id="@+id/tv_footer_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:textSize="@dimen/dimen_15dp"
                android:text="@string/terms"
                android:layout_toRightOf="@id/iv_footer_terms"/>
        </RelativeLayout>-->

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_nav_footer_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_nav_footer_home"
        android:background="@drawable/ripple_effect_normal"
        android:orientation="vertical">

        <View
            android:id="@+id/view_below_other_places"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:background="@color/colorGrayLight" />

        <ImageView
            android:id="@+id/iv_footer_log_out"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dimen_13dp"
            android:src="@android:drawable/ic_menu_call"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_footer_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_toRightOf="@id/iv_footer_log_out"
            android:text="@string/logout"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_15dp" />

    </RelativeLayout>

</RelativeLayout>

